# Improving-Trained-LLM-Models-with-RLHF

./: README.md  pyproject.toml  roadmap.md  train.py
.github/workflows/: ci_perf.yml
configs/: cluster_topology.yaml  deepspeed_zero3.yaml
docs/: COMPLETION_SUMMARY.md  RESEARCH_REPORT.md  educational_deepdive.md
docs/core/: ARCHITECTURE.md  philosophy.md
docs/governance/: contributing.md  security.md
docs/operations/: setup.md  system_design.md
src/rlhf_platform/: __init__.py
src/rlhf_platform.egg-info/: PKG-INFO  SOURCES.txt
src/rlhf_platform/alignment/: __init__.py  loss.py  ppo_engine.py  rollout.py
src/rlhf_platform/distributed/: __init__.py  async_io.py  comm_hooks.py  topology.py
src/rlhf_platform/utils/: __init__.py  telemetry.py
tests/: test_rollout.py  test_topology.py
