[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlhf-platform"
version = "0.1.0"
description = "Production-grade distributed RLHF platform for scaling alignment across multi-node GPU clusters"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "ML Systems Team", email = "ml-systems@example.com"}
]
keywords = ["rlhf", "reinforcement-learning", "language-models", "distributed-training"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "torch>=2.0.0",
    "transformers==4.32.0",
    "tokenizers==0.13.3",
    "safetensors==0.3.2",
    "accelerate==0.22.0",
    "datasets==2.14.4",
    "peft==0.5.0",
    "trl==0.5.0",
    "bitsandbytes==0.41.1",
    "triton==3.7.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
    "tensorboard>=2.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.12",
    "mypy>=1.0",
    "flake8>=6.0",
    "pylint>=2.17",
]
eval = [
    "lm-eval>=0.3.0",
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
]
deepspeed = [
    "deepspeed>=0.12.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.2",
    "sphinx-autodoc-typehints>=1.22",
]

[project.urls]
Homepage = "https://github.com/yourusername/rlhf-platform"
Documentation = "https://rlhf-platform.readthedocs.io"
Repository = "https://github.com/yourusername/rlhf-platform.git"
Issues = "https://github.com/yourusername/rlhf-platform/issues"

[tool.setuptools]
packages = "find"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.package-data]
rlhf_platform = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
py_version = 311
skip_gitignore = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=rlhf_platform --cov-report=term-missing -v"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
branch = true
source = ["src/rlhf_platform"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@abstractmethod",
]
